--- a/lists.html
+++ b/lists.html
@@ -61,7 +61,7 @@
                 <li>Executive Decision</li>
                 <li>Harry Potter</li>
                 <li>Hard Target</li>
-                <li>THe HUnger Games</li>
+                <li>THe Hunger Games</li>
             </ol>
         </li>
     </ul>
