--- a/HtmlAssignment/ac.html
+++ b/HtmlAssignment/ac.html
@@ -6,8 +6,11 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    <a href="fav-games.html">Go back..</a>
+    <h3>Assassin's Creed II</h3>
+    <div>
     <p>The game is set in the European Renaiassance era and is about two secret organizations in conflict.</p>
     <img src="../links-and-images/images/ac2.JPG"/>
+    </div>
+    <a href="fav-games.html">Go back..</a>
 </body>
 </html>
