--- a/HtmlAssignment/gta.html
+++ b/HtmlAssignment/gta.html
@@ -6,8 +6,12 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    <img src="../links-and-images/images/gta.png"/>
+    <h3>GTA San Andreas</h3>
+    <div>
     <p>A game, quite literally, about theft.</p>
+    <img src="../links-and-images/images/gta.png"/>
+    </div>
+    
     <a href="fav-games.html">Go back..</a>
 </body>
 </html>
