--- a/HtmlAssignment/rdr.html
+++ b/HtmlAssignment/rdr.html
@@ -6,8 +6,11 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    <a href="fav-games.html">Go back..</a>
+    <h3>Red Dead Redemption 2</h3>
+    <div>
     <p>A story of the last days of the American Wild West and a group of Outlaws.</p>
     <img src="../links-and-images/images/rdr2.jpg"/>
+    </div>
+    <a href="fav-games.html">Go back..</a>
 </body>
 </html>
