--- a/HtmlAssignment/siege.html
+++ b/HtmlAssignment/siege.html
@@ -6,8 +6,12 @@
     <title>HTML Assignment</title>
 </head>
 <body>
-    <a href="fav-games.html">Go back..</a>
+    <h3>Rainbow Six Siege</h3>
+    <div>
     <p>A multiplayer online game prefering tactics and planning over blind shooting.</p>
     <img src="../links-and-images/images/siege.jpg"/>
+    </div>
+    
+    <a href="fav-games.html">Go back..</a>
 </body>
 </html>
