--- a/HtmlAssignment/watch.html
+++ b/HtmlAssignment/watch.html
@@ -6,9 +6,11 @@
     <title>HTML Assignment</title>
 </head>
 <body>
+    <h3>Watch Dogs</h3>
     <div>
-    <img src="../links-and-images/images/watch.jpg"/>
     <p>Watch Dogs is about a hyperconnected world with advanced communication and IoT. We play the role of a vigilante hacker.</p>
+    <img src="../links-and-images/images/watch.jpg"/>
+    
     </div>
     <a href="fav-games.html">Go back..</a>
     
