--- a/Lists/lists.html
+++ b/Lists/lists.html
@@ -18,8 +18,7 @@
     <h4>Ordered Todo List</h4>
     <ol>
         <li>Check email</li>
-        <li>Iron clothes</li>
-        <li>Get today's tasks done</li>
+        <li>Get work tasks done</li>
         <li>Rest</li>
     </ol>
 
