connecting all questions

--- a/js-1/game.html
+++ b/js-1/game.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h3>Console Game</h3>
+    <a href="./mathematical-shapes.html">Math Shapes</a>
+    <a href="./conditional-loops.html">Conditionals & Loops</a>
 </body>
 </html>
